<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_DriverStatus"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:orientation="horizontal"
    android:background="@color/black"
    tools:context="com.example.Tiber.ui.dstatus.driver_status">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/txtDrivingStatus"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnAvailable"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="40dp"
        android:text="@string/btnAvailable"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnUnavailable"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginLeft="170dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="40dp"
        android:text="@string/btnOut"
        android:textStyle="bold" />
</FrameLayout>